style: center-align and update color for hero side title

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <!-- Desktop image (visible on larger screens) -->
         <div class="hero-desktop-image">
-          <h2 class="hero-side-title">What We Do and How We're Different</h2>
+          <h2 class="hero-side-title" style="text-align:center; color: #9EE90E;">What We Do and How We're Different</h2>
           <picture>
             <img src="assets/home11.webp" alt="Dr. Okonkwo" class="hero-image" />
           </picture>
